sitio web de jose cesca

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CLS3 Demo</title>
+  <link rel="stylesheet" href="cls3.css">
+</head>
 <body>
-<h1>Hello ...</h1>
-<p>I'm hosted with GitHub Pages.</p>
+  <header class="header">Mi Biblioteca CSS: CLS3</header>
+  <button class="btn">Botón de prueba</button>
 </body>
 </html>
