--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <header class="header">Mi Biblioteca CSS: CLS3</header>
-  <button class="btn">Botón de prueba</button>
+    <a href="http://190.30.242.68:3000"><button class="btn">Botón de prueba</button></a>
+
 </body>
 </html>
 
