--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ r a bknd<!DOCTYPE html>
 </head>
 <body>
   <header class="header">Mi Biblioteca CSS: CLS3</header>
-    <a href="http://190.30.242.68:3000"><button class="btn">Botón de prueba</button></a>
+    <a href="http://190.30.242.68:3000"><button class="btn"> ingresar </button></a>
 
 </body>
 </html>
