--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-r a bknd<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,8 +8,11 @@ r a bknd<!DOCTYPE html>
 </head>
 <body>
   <header class="header">Mi Biblioteca CSS: CLS3</header>
-    <a href="http://190.30.242.68:3000"><button class="btn"> ingresar </button></a>
-
+  <nav>
+    
+  </<a href="http://190.30.242.68:3000"><button class="btn"> ingresar </button></a>
+nav>
+    
 </body>
 </html>
 
