--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 <body>
   <header class="header">Mi Biblioteca CSS: CLS3</header>
   <nav>
-    
   </<a href="http://190.30.242.68:3000"><button class="btn"> ingresar </button></a>
-nav>
-    
+  </nav>
 </body>
 </html>
 
