--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <header class="header">Mi Biblioteca CSS: CLS3</header>
   <nav>
-  </<a href="http://190.30.242.68:3000"><button class="btn"> ingresar </button></a>
+    <a href="http://190.30.242.68:3000">
+      <button class="btn"> ingresar </button>
+    </a>
   </nav>
 </body>
 </html>
