--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="cls30.css">
 </head>
 <body>
-  <header class="header">Mi Biblioteca CSS: CLS3</header>
+  <header class="header">Mi Biblioteca CSS: CLS3.0></header>
   <hr>
   <nav>
     <a href="http://190.30.242.68:3000">
