--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CLS3 Demo</title>
   <link rel="stylesheet" href="cls30.css">
+    <!-- Include the compiled Ratchet CSS -->
+    <link href="ratchet.css" rel="stylesheet">
+
+    <!-- Include the compiled Ratchet JS -->
+    <script src="ratchet.js"></script>
 </head>
 <body>
   <header class="header">Mi Biblioteca CSS: CLS3.0</header>
