--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>CLS3 Demo</title>
   <link rel="stylesheet" href="cls30.css">
     <!-- Include the compiled Ratchet CSS -->
-    <link href="css/ratchet.css" rel="stylesheet">
+    <link href="css/ratchet.min.css" rel="stylesheet">
 
     <!-- Include the compiled Ratchet JS -->
-    <script src="js/ratchet.js"></script>
+    <script src="js/ratchet.min.js"></script>
 </head>
 <body>
   <header class="header">Mi Biblioteca CSS: CLS3.0</header>
