--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <hr>
   <nav>
     <a href="http://190.30.242.68:3000">
-      <button class="btn"> ingresar </button>
+      <button class="btn"> ingreso a senna </button>
     </a>
   </nav>
   <nav class="bar bar-tab">
@@ -28,19 +28,19 @@
   </a>
   <a class="tab-item" href="#">
     <span class="icon icon-person"></span>
-    <span class="tab-label">Profile</span>
+    <span class="tab-label">Perfil</span>
   </a>
   <a class="tab-item" href="#">
     <span class="icon icon-star-filled"></span>
-    <span class="tab-label">Favorites</span>
+    <span class="tab-label">Favoritos</span>
   </a>
   <a class="tab-item" href="#">
     <span class="icon icon-search"></span>
-    <span class="tab-label">Search</span>
+    <span class="tab-label">B&uacute;squeda</span>
   </a>
   <a class="tab-item" href="#">
     <span class="icon icon-gear"></span>
-    <span class="tab-label">Settings</span>
+    <span class="tab-label">Configuraci&oacute;n</span>
   </a>
 </nav>
 
