--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
 <body>
   <header class="header">Mi Biblioteca CSS: CLS3.0</header>
   <hr>
-  <nav>
-    <a href="http://190.30.242.68:3000">
-      <button class="btn"> ingreso a senna </button>
-    </a>
-  </nav>
+  
   <nav class="bar bar-tab">
   <a class="tab-item active" href="#">
     <span class="icon icon-home"></span>
@@ -43,7 +39,19 @@
     <span class="tab-label">Configuraci&oacute;n</span>
   </a>
 </nav>
+<div class="content">
 
+  <ul class="table-view">
+<li class="table-view-cell table-view-divider">
+</li>
+    <li class="table-view-cell media>
+      
+    </<a href="http://190.30.242.68:3000">
+      <button class="btn"> ingreso a senna </button>
+    </a>
+  </li>
+  </ul>
+</div>
 </body>
 </html>
 
