--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
   <ul class="table-view">
 <li class="table-view-cell table-view-divider">
+  links preferidos
 </li>
     <li class="table-view-cell media>
       
