--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </li>
     <li class="table-view-cell media>
       
-    </<a href="http://190.30.242.68:3000">
+    <a href="http://190.30.242.68:3000">
       <button class="btn"> ingreso a senna </button>
     </a>
   </li>
