--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 </li>
     <li class="table-view-cell media>
       
-    <a href="http://190.30.242.68:3000">
-      <button class="btn"> ingreso a senna </button>
+    <a class="navigate-right" href="http://190.30.242.68:3000" data-transition="slide-in">
+      <div class="media-body"> ingreso a senna </div>
     </a>
   </li>
   </ul>
