--- a/index.html
+++ b/index.html
@@ -40,18 +40,16 @@
   </a>
 </nav>
 <div class="content">
-
-  <ul class="table-view">
+<ul class="table-view">
 <li class="table-view-cell table-view-divider">
   links preferidos
 </li>
-    <li class="table-view-cell media>
-      
-    <a class="navigate-right" href="http://190.30.242.68:3000" data-transition="slide-in">
-      <div class="media-body"> ingreso a senna </div>
-    </a>
-  </li>
-  </ul>
+<li class="table-view-cell media>
+  <a class="navigate-right" href="http://190.30.242.68:3000">
+    SENNA 
+  </a>
+</li>
+</ul>
 </div>
 </body>
 </html>
