--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <body>
   <header class="header">Mi Biblioteca CSS: CLS3.0</header>
   <hr>
-  
+<nav>
+    <a  href="http://190.30.242.68:3000"> <button> SENNA </button>  </a>
+
+</nav>  
   <nav class="bar bar-tab">
   <a class="tab-item active" href="#">
     <span class="icon icon-home"></span>
@@ -44,10 +47,6 @@
 <li class="table-view-cell table-view-divider">
   links preferidos
 </li>
-<li class="table-view-cell media>
-  <a class="navigate-right" href="http://190.30.242.68:3000">
-    SENNA 
-  </a>
 </li>
 </ul>
 </div>
