--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   <header class="header">Mi Biblioteca CSS: CLS3.0</header>
   <hr>
 <nav>
-    <a  href="http://190.30.242.68:3000"> <button> SENNA </button>  </a>
-
+    <a  href="http://190.30.242.68:3000">  SENNA   </a>
 </nav>  
   <nav class="bar bar-tab">
   <a class="tab-item active" href="#">
@@ -42,14 +41,6 @@
     <span class="tab-label">Configuraci&oacute;n</span>
   </a>
 </nav>
-<div class="content">
-<ul class="table-view">
-<li class="table-view-cell table-view-divider">
-  links preferidos
-</li>
-</li>
-</ul>
-</div>
 </body>
 </html>
 
