--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
     <div class="footer-container">
       <div class="footer-about">
         <h3>Sobre Mí</h3>
-        <p>Soy un desarrollador frontend con más de 5 años de experiencia en la creación de sitios web y aplicaciones atractivas y funcionales.</p>
+        <p>Soy un desarrollador frontend con más de 15 años de experiencia en la creación de sitios web y aplicaciones atractivas y funcionales.</p>
       </div>
       <div class="footer-contact" id="contact">
         <h3>Contacto</h3>
-        <p>Email: tuemail@example.com</p>
-        <p>Teléfono: (123) 456-7890</p>
+        <p>Email: josecesca@gmail.com</p>
+        <p>Teléfono: (54) 456-7890</p>
       </div>
       <div class="footer-social">
         <h3>Redes Sociales</h3>
