--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+@<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -60,7 +60,7 @@
       </div>
       <div class="footer-contact" id="contact">
         <h3>Contacto</h3>
-        <p>Email: tuemail@example.com</p>
+        <p>Email: josecesca@gmail.com</p>
         <p>Teléfono: (123) 456-7890</p>
       </div>
       <div class="footer-social">
