--- a/index.html
+++ b/index.html
@@ -19,14 +19,11 @@
     </div>
     
   </header>
-  
-  <section class="hero">
-    <div class="hero-content">
+  <div>
       <h1>Desarrollador Frontend Profesional</h1>
       <p>Transforma tu visión en una realidad digital impactante.</p>
       
     </div>
-  </section>
   <section id="services">
     <h2>Mis Servicios</h2>
     <div class="services-container">
@@ -53,7 +50,7 @@
     <div class="footer-container">
       <div class="footer-about">
         <h3>Sobre Mí</h3>
-        <p>Soy un desarrollador frontend con más de 5 años de experiencia en la creación de sitios web y aplicaciones atractivas y funcionales.</p>
+        <p>Soy un desarrollador frontend con más de 15 años de experiencia en la creación de sitios web y aplicaciones atractivas y funcionales.</p>
       </div>
       <div class="footer-contact" id="contact">
         <h3>Contacto</h3>
