--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
         cursor: pointer;   
         overflow: visible;
     }
+        
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
     </style>
 </head>
 <body>
