--- a/nav.html
+++ b/nav.html
@@ -51,8 +51,8 @@
       </div>
       <div class="footer-contact" id="contact">
         <h3>Contacto</h3>
-        <p>Email: josecesca@gmail.com</p>
-        <p>Teléfono: (123) 456-7890</p>
+        <p>Email: <a href="http://190.30.242.68"> josecesca@gmail.com </a></p>
+        <p>Teléfono: (xx) xxxxxxxx </p>
       </div>
       <div class="footer-social">
         <h3>Redes Sociales</h3>
