--- a/nav.html
+++ b/nav.html
@@ -51,7 +51,8 @@
       </div>
       <div class="footer-contact" id="contact">
         <h3>Contacto</h3>
-        <p>Email: <a href="http://190.30.242.68"> josecesca@gmail.com </a></p>
+        <p>www: <a href="http://190.30.242.68:3000"> jmcesc@ AI Consulting </a></p>
+        <p>Email: josecesca@gmail.com </p>
         <p>Teléfono: (xx) xxxxxxxx </p>
       </div>
       <div class="footer-social">
