--- a/nav.html
+++ b/nav.html
@@ -53,7 +53,7 @@
         <h3>Contacto</h3>
         <p>www: <a href="http://190.30.242.68:3000"> jmcesc@ AI Consulting </a></p>
         <p>Email: josecesca@gmail.com </p>
-        <p>Teléfono: (xx) xxxxxxxx </p>
+        <p>Teléfono: (54) 385 4 092690 </p>
       </div>
       <div class="footer-social">
         <h3>Redes Sociales</h3>
@@ -65,7 +65,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2024 jm.cesc@. Todos los derechos reservados.</p>
+      <p>&copy; 2025 jm.cesc@. Todos los derechos reservados.</p>
     </div>
   </footer>
   
